app/static/css/dark.css
/* ... */
body.dark #chpop {
  background: #202225;
  border-top: 1px solid #40444b;
  border-left: 1px solid #40444b;
  border-right: 1px solid #40444b;
}

body.dark #chcont {
  border-bottom: none;
  color: #ccc;
}

body.dark #chsend {
  background-color: #40444b;
}

body.dark .msg-hl {
  background-color: #111;
}


/* other stuff? */

body.dark a[href="#spoiler"] {
  background-color: #050505;
  color: #050505
}

body.dark .cw-items a {
  color: #fff;
}

body.dark .motto {
  color: #ccc;
}

body.dark .admin_alert {
  background-color: #bd0101;
  color: #dedede;
}

body.dark .admin_alert .btn_link {
  color: #1b006f;
}

body.dark .editbar path {
  fill: #ccccc3;
}

body.dark #hiddensubs {
  background: #000;
  filter: drop-shadow(-20px 20px 18px #000);
}

body.dark #hiddensubs li:hover {
  background-color: #0a0a0a;
}

body.dark thead a {
  color: #231411
}

/* alldaposts */

body.dark .alldaposts {
  background: transparent;
  background-color: transparent;
}

body.dark .alldaposts .links a.comments {
  color: #526a7d;
}

body.dark .alldaposts .links a {
  color: #797979;
}

body.dark .stickyposts .links a {
  color: #797979;
}

body.dark .stickyposts .links a.comments {
  color: #526a7d;
}

/* sidebar */

body.dark .sidebar .pure-button-primary {
  color: #fff;
  background-color: #3a3c40;
}

body.dark .sidebar .pure-button-primary:hover {
  background-color: #282828;
}


/* poll */
body.dark .poll-pbar {
  background-color: #4a4a4a;
  border-color: #656565;
}

/* modals */
body.dark .tingle-modal-box {
  background-color: #171717;
}

body.dark .bot-tag {
  border: 1px solid #2f2f2f;
  background: #111;
  color: #7d7d7d;
}

/* deleted comments and posts view for mods and admins */
body.dark .mod.report.preview .preview-text-container.deleted {
  background-color: #171717;
  border: 1px solid #6f1818;
}

body.dark .mod.report.preview .preview-text-container.deleted.post-content-container {
  background-color: #171717;
  border: 1px solid #6f1818;
}

body.dark article.text-post.comment.deleted {
  /*  background-color: #6b6b6b36; */
  /*  border: 1px solid #6f1818; */
}

body.dark .post-content-container.deleted {
  background-color: #171717;
}

body.dark .postbar.post.deleted {
  background-color: #171717;
  border: 1px solid #6f1818;
}

body.dark .poll-space.deleted {
  background-color: #171717;
  border: 1px solid #6f1818;
}

body.dark .uploaditem.deleted {
  background-color: #171717;
  border: 1px solid #6f1818;
}

body.dark .deleted-user {
  background-color: #171717;
  border: 1px solid #6f1818;
}

body.dark .browse-history {
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  background-color: #171717;
  border: 1px solid #526a7d;
  color: lightgray;
}

body.dark .browse-history.disabled {
  border-color: #333;
  color: #171717;
}

body.dark .browse-history.disabled:focus {
  outline: #333 none;
}

body.dark .browse-history:focus {
  outline: #526a7d none;
}

body.dark .links a.post-open-reports {
  color: #526a7d;
}

body.dark .allcomments {
  top: 0px;
}

body.dark .sortcomments {
  bottom: 15px;
  right: 0px
}

body.dark #sortby {
  background: #171717;
  color: #ddd;
  font-size: smaller;
  text-align: center;
  cursor: pointer;
}

body.dark .pure-menu-item a {
  background: #806767;
  color: #fff
}

body.dark .pure-menu-item a:hover {
  background: #666;
  color: #d17262;
}

body.dark .pure-menu-children {
  border-color: #333;
}

body.dark .popup {
  background-color: #121212;
  border-color: #0f0f0f;
}

body.dark .selflair,
body.dark .submitflair {
  background-color: #333;
  color: #777;
  border-color: #222;
}

body.dark .submitflair.selected {
  color: #ddd;
  background-color: #161616;
  border-color: #666;
}

body.dark .submitflair:hover {
  background-color: #aaa;
}

body.dark .admin-config-edit {
  fill: #526a7d;
}

body.dark .admin-config-edit:hover {
  fill: #d17262;
}

body.dark .mod-table .header {
  border-color: #4e4e4e;
  background-color: #5c5c5c;
}

body.dark .mod-table,
body.dark .mod-table .header,
body.dark .mod-table .elem,
body.dark .mod-table .close-elem,
body.dark .mod-table .last-elem {
  border-color: #4e4e4e;
}

body.dark .mod-table .elem,
body.dark .mod-table .close-elem,
body.dark .mod-table .last-elem {
  background-color: #222;
}

body.dark .RoomView .Timeline_messageBody {
  color: #dddddd;
}

body.dark .RoomView .Timeline_messageOptions {
  background: #343434;
  border-color: #222;
  color: #eee;
}

body.dark .RoomView .MessageComposer_replyPreview {
  background-color: #070707;
  box-shadow: 0 0 5px #111;
}

body.dark .Timeline_messageReactions button,
body.dark .Timeline_messageBody .pill {
  background-color: #333;
  color: #eee;
  border-color: #444;
}

body.dark .AnnouncementView>div {
  background-color: #333;
  color: #eee;
}

body.dark #chpop .menu {
  background-color: #222;
}

body.dark #chpop .menu .button,
body.dark #chpop .menu .menu-item {
  color: #eee;
}

body.dark #chloading {
  color: #ddd;
}

body.dark .stickyposts {
  border-bottom: 1px solid #40444b;
  background-color: #373a3f;
  background: #373a3f;
}

body.dark .expando {
  background-color: #96969661 !important;
}

body.dark .expando svg path {
  fill: #ccc;
}

body.dark .announcement {
  padding: 3px;
  margin-right: .5em;
  border-radius: 5px;
  color: #e22;
  background-color: #3f3d3b;
  font-size: small;
}

body.dark .commenthead {
  color: #bbbbbb;
}

body.dark .c-upvote svg,
body.dark .c-downvote svg,
body.dark .upvote svg,
body.dark .downvote svg {
  fill: #c2cccc !important;
}

body.dark .upvote path,
body.dark .c-upvote path,
body.dark .c-downvote path {
  fill: #888888;
}

body.dark .upvoted path {
  fill: #c3cccc;
}

body.dark .downvote path {
  fill: #888888;
}

body.dark .downvoted path {
  fill: #242424;
}

body.dark .postflair {
  background-color: #3a5173 !important;
  border: 1px solid #526a7d !important;
  color: lightgray;
}

body.dark td.subsentry.subsubscribed {
  border-left: 4px solid #202225;
}
/* ... */

